--- a/trabalhe conosco.css
+++ b/trabalhe conosco.css
@@ -1,3 +1,9 @@
 form{
-padding:  20px 0px 20px 0px;
+padding:  20px 0px 20px 20px;
+text-align: left;
+
+}
+label{
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 1.2em;
 }
