--- a/trabalhe conosco.css
+++ b/trabalhe conosco.css
@@ -1,4 +1,5 @@
 form{
+margin: 10px;
 padding:  20px 0px 20px 20px;
 text-align: left;
 
@@ -6,4 +7,11 @@ text-align: left;
 label{
     font-family: 'Courier New', Courier, monospace;
     font-size: 1.2em;
+}
+input{
+    height: 30px;
+    margin-bottom: 20px;
+    background-color: #c0c0c0;
+    border-radius: 5px;
+    border:  solid black 2px;
 }
